src/css/main.css
* {
  color: #e6eaf2;
  user-select: none;
  cursor: default;
}

html, body {
  margin: 0 auto;
  overflow: hidden;
}

hr {
  border: 0;
  height: 0;
  border-bottom: 1px solid #303a4c;
}

i {
  vertical-align: middle;
}

.container {
  overflow-x: hidden;
  width: 300px;
}

.menu {
  background-color: #171c23;
  font-size: 13px;
  display: table;
  width: 100%;
  padding: 0px 0px 3px 0px;
}

.menu .button {
  -webkit-app-region: no-drag;
}

.menu .left, .menu .middle, .menu .right {
  display: table-cell;
}

.menu .left {
  width: 50%;
  text-align: left;
  padding-left: 3px;
}

.menu .middle {
  font-family: "Roboto", sans-serif;
  vertical-align: middle;
  text-align: center;
  color: #748199;
  font-size: 13px;
  font-weight: 700;
}

.menu .right {
  width: 50%;
  text-align: right;
  padding-right: 3px;
}

.entries {
  overflow: auto;
  max-height: 200px;
}

.entries::-webkit-scrollbar {
  width: 5px;
}

.entries::-webkit-scrollbar-track {
  background: #272f3d;
}

.entries::-webkit-scrollbar-thumb {
  background: #404c60;
}

.entry {
  width: 100%;
}

.entry .title {
  width: 100%;
  background-color: #272f3d;
  font-size: 12px;
  padding: 2px 0px 2px 0px;
}

.entry .title .left {
  text-align: left !important;
  padding: 0px 0px 0px 3px;
  float: left;
}

.entry .title .middle {
  font-family: "Roboto", sans-serif;
  width: 210px;
  display: inline-block;
  vertical-align: middle;
  text-align: left !important;
  font-weight: 700;
  padding-left: 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.entry .title .right {
  text-align: right !important;
  padding: 0px 3px 0px 3px;
  float: right;
}

.entry .title .timeout {
  font-family: "Roboto", sans-serif;
  border-radius: 2px;
  display: inline-block;
  text-align: left !important;
  background-color: #748199;
  font-size: 10px;
  color: #272f3d;
  font-weight: 700;
  padding: 0px 2px;
  user-select: none;
  cursor: pointer;
}

.entry .content {
  font-size: 12px;
  font-weight: 700;
}

.entry .content .value {
  font-family: "Roboto", sans-serif;
  vertical-align: middle;
}

.entry .content .text {
  font-family: "Roboto", sans-serif;
  padding: 3px 3px;
  font-weight: normal;
  text-align: justify;
}

.entry .content .fa-arrow-right {
  padding: 0px 5px;
  vertical-align: middle;
  color: #748199;
}

.entry .content img.icon {
  height: 18px;
  width: auto;
  vertical-align: middle;
}

.entry .content .item {
  position: relative;
  background-color: #202630;
}

.entry .content .price {
  padding: 5px 3px;
}

.entry .content .confidence {
  position: absolute;
  width: 3px !important;
  left: 0;
  top: 0;
  bottom: 0;
  float: left;
  display: inline-block;
  background-color: #748199;
}

.entry .content .peity {
  position: absolute;
  right: 0;
  padding: 0px 3px;
  float:right;
  display: inline-block;
  vertical-align: middle;
}

.entry .content .header {
  font-family: "Roboto", sans-serif;
  position: relative;
  font-weight: 700;
  font-size: 10px;
  text-transform: uppercase;
  background-color: #202630;
}

.entry .explanation {
  text-align: center;
}

.entry .explanation-table {
  margin: 0 auto;
  font-family: "Roboto", sans-serif;
  font-weight: normal;
  font-size: 10px;
  padding: 3px 5px;
}

.entry .explanation-table .percentage {
  font-family: "Roboto", sans-serif;
  text-align: right;
  vertical-align: top;
}

.entry .explanation-table .mod {
  letter-spacing: 0.5px;
  vertical-align: top;
  text-align: justify;
}

.entry .feedback {
  display: table;
  width: 100%;
}

.entry .feedback .cell {
  font-family: "Roboto", sans-serif;
  font-size: 10px;
  font-weight: 700;
  text-transform: uppercase;
  display: table-cell;
  padding: 2px 5px;
  vertical-align: middle;
}

.entry .feedback .info {
  background-color: #272f3d;
  color: #748199;
  text-align: left;
}

.entry .feedback .textarea {
  padding: 4px 5px 2px 5px;
  background-color: #272f3d;
}

.entry .feedback textarea {
  width: 99%;
  border: 0;
  font-family: "Roboto", sans-serif;
  font-size: 10px;
  background-color: #202630;
  text-align: left;
  resize: none;
}

.entry .feedback textarea::placeholder {
  color: #748199;
}

.entry .feedback .option {
  width: 30px;
  background-color: #323c4e;
  border-left: 1px solid #202630;
  text-align: center;
  cursor: pointer;
}

.entry .feedback .option:hover, .entry .feedback .active {
  background-color: #46546d !important;
}

.settings {
  background-color: #202630;
  font-family: "Roboto", sans-serif;
  padding: 10px;
}

.settings td.title {
  text-transform: uppercase;
  font-weight: 700;
  color: #748199;
}

.settings td.label {
  font-size: 12px;
  vertical-align: middle;
  text-align: justify;
  font-weight: 700;
  white-space: nowrap;
  /*color: #748199;*/
}

.settings td.slider-label {
  font-size: 12px;
  vertical-align: middle;
  color: #748199;
  padding: 0px 3px;
}

.settings td.info {
  font-size: 10px;
  vertical-align: middle;
  text-align: justify;
  color: #748199;
  line-height: 12px;
  text-transform: uppercase;
  font-weight: 700;
}

.settings td.info a {
  color: #748199;
}

.settings .toggle i {
  font-size: 16px;
  text-decoration: none;
  padding-right: 3px;
  vertical-align: top;
  float: right;
  cursor: pointer;
}

.settings .slider {
  padding: 0px 5px;
}

.settings label.wrap {
  padding-bottom: 5px;
  width: 100%;
  overflow: hidden;
  position: relative;
  display: block;
}

.settings select {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background: #303a4c;
  padding: 7px;
  font-size: 11px;
  border: 0;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.settings label.wrap:after {
  content:"\f150";
  font-family: "Font Awesome\ 5 Free";
  color: #748199;
  position: absolute;
  right: 0;
  top: 5px;
  z-index: 1;
  width: 8%;
  pointer-events: none;
}

